<resources>
    <string name="app_name">TestApp</string>

    <!--region errors-->
    <string name="error_common">Something went wrong. Please, try again.</string>
    <!--endregion-->

    <!--    Main Flow   -->
    <string name="main_flow_tab_home">Home</string>
    <string name="main_flow_tab_explorer">Explorer</string>
    <string name="main_flow_tab_net_of_nets">Net of Nets</string>
    <string name="main_flow_tab_activity">Activity</string>
    <string name="main_flow_tab_post_a_job">Post a Job</string>

    <!--Main-->
    <string name="main_lower_bound">Lower bound</string>
    <string name="main_bound_error">field should be filled</string>
    <string name="main_lower_bound_error">lower bound should be less than upper bound</string>
    <string name="main_upper_bound">Upper bound</string>
    <string name="main_upper_bound_error">upper bound should be more than lower bound</string>
    <string name="main_search_button">Search</string>
    <!--endregion-->

    <!--Comment item-->
    <string name="comment_item_post_id">Post id: %d</string>
    <string name="comment_item_id">Id: %d</string>
    <string name="comment_item_name">Name: %s</string>
    <string name="comment_item_email">Email: %s</string>
    <string name="comment_item_body">Body: %s</string>
    <!--endregion-->

    <!--Explorer-->
    <string name="explorer_title">Explorer</string>
    <string name="search_hint">Senior Project Manager, London</string>
    <string name="find_jobs_title">Find Jobs</string>
    <string name="help_others_title">Help Others</string>
    <string name="find_candidates_title">Find Candidates</string>
    <!--endregion-->

</resources>